<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.otaoto.MainActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/secret_input_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:passwordToggleEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/secret_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secret_input_hint"
            android:imeOptions="flagNoFullscreen|actionDone"
            android:inputType="textPassword|textMultiLine"
            android:saveEnabled="true"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/secret_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/secret_submit"
        />

</LinearLayout>
