<resources>
    <string name="app_name">One Time and One Time Only</string>
    <string name="create_input_hint">Message</string>
    <string name="create_submit">Submit</string>

    <string name="url_heroku" translatable="false">otaoto.herokuapp.com</string>
    <string name="url" translatable="false">otaoto.co</string>

    <string name="confirm_created">You created a secret!</string>
    <string name="confirm_description1">
        Your secret is available at the link below. Send it to your recipient or hold onto it for later.
    </string>
    <string name="confirm_description2">
        Remember, visiting that link once will make it disappear!
    </string>
    <string name="confirm_double_check">
        Want to double check? You can see your secret one more time if you need to.
    </string>
    <string name="confirm_show_button">Show Secret</string>
    <string name="confirm_hide_button">Hide Secret</string>
    <string name="show_create_prompt">Have something you want to share?</string>
    <string name="show_create_button">Share your secret</string>
    <string name="label_share_url">Share URL</string>
    <string name="generic_error">An error occurred!</string>
    <string name="confirm_create_another">Create another</string>
    <string name="show_reveal">Show my secret</string>
    <string name="show_gone">This secret is gone or perhaps never existed!</string>
</resources>
